--- a/lectures/nn_kernels/nn_kernels.tex
+++ b/lectures/nn_kernels/nn_kernels.tex
@@ -94,8 +94,8 @@ random). In general, in nonparametric regression, we study error\footnote{In the
   mean separate things; and defined the risk via the expectations
   \smash{$\E\|\hf - f_0\|_n^2$} and \smash{$\E\|\hf - f_0\|_2^2$}, with respect
   to appropriate randomness in the training set that is used to define
-  \smash{$\hf$}. In this and future lectures, we'll take the liberty of being
-  more flexible with our nomenclature.}    
+  \smash{$\hf$}. In this and future lectures, we'll often take the liberty of
+  being more flexible with our nomenclature.}    
 bounds in probability or in expectation, depending on what is more convenient in
 the given analysis. Upper bounds on the risk (as we will see in this lecture and
 the next) are usually easier to derive in probability, and lower bounds (as we
