--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -98,7 +98,7 @@ also tends to be much better conditioned.
 Defining B-splines is certainly requires more nuance than the truncated power
 basis, and the precise form of a B-spline is unimportant for the rest of this
 lecture. For completeness, you can find the details behind their construction in
-somes supplementary notes posted on the course website.
+a supplementary note posted on the course website.
 
 \subsection{Regress away!}
 
@@ -975,8 +975,8 @@ example, we can consider the minimization to be over the Sobolev space
 $W^{m,2}(U)$,\footnote{There is a subtlety here about what we actually mean here
   for unbounded domain like $U = \R^d$. The problem is that the Sobolev space 
   $W^{m,2}(\R^d)$ doesn't admit polynomials of degree $m-1$, whereas we'd like
-  all of these to be allowed in the minimization. We may follow up later with a
-  separate note about this.}   
+  all of these to be allowed in the minimization. See the course website for a
+  supplementary note that explains these details.} 
 which recall contains $m$ times weakly differentiable functions with $\alpha\th$
 derivative in $L^2(U)$, for $|\alpha| \leq m$. 
 
