Make more consistent

--- a/lectures/resolvents/pratik.sty
+++ b/lectures/resolvents/pratik.sty
@@ -155,18 +155,18 @@
 
 % theorem, lemma, corollary, proposition in plain style
 \theoremstyle{plain}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{claim}[theorem]{Claim}
+\newtheorem{theorem}{Theorem}%[section]
+\newtheorem{lemma}{Lemma}
+\newtheorem{corollary}{Corollary}
+\newtheorem{proposition}{Proposition}
+\newtheorem{claim}{Claim}
 
 % definition, assumption, remark in definition style
 \theoremstyle{definition}
-\newtheorem{definition}[theorem]{Definition}
+\newtheorem{definition}{Definition}
 \newtheorem{assumption}{Assumption}
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem{example}[theorem]{Example}
+\newtheorem{remark}{Remark}
+\newtheorem{example}{Example}
 
 % add tags for clever ref package
 \crefname{assumption}{assumption}{assumptions} % upper case done automatically
