--- a/lectures/tps_rkhs/tps_rkhs.tex
+++ b/lectures/tps_rkhs/tps_rkhs.tex
@@ -27,7 +27,7 @@
 \DeclareMathAccent{\wc}{0}{mathx}{"71}
 %%% End Alden's Additions
 
-\title{Supplementary Notes: Representation of thin-plate splines \\ \smallskip
+\title{Supplementary Notes: Representation of Thin-Plate Splines \\ \smallskip
 \large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
 Alden Green}
 \author{}
