--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,39 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-03-15 23:28:37 -0700 
+%% Created for Ryan Tibshirani at 2023-03-30 05:30:55 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{angelopoulos2023gentle,
+	author = {Anastasios N. Angelopoulos and Stephen Bates},
+	date-added = {2023-03-29 06:21:22 -0700},
+	date-modified = {2023-03-30 05:30:51 -0700},
+	journal = {Foundations and Trends in Machine Learning},
+	number = {4},
+	pages = {494--591},
+	title = {A gentle introduction to conformal prediction and distribution-free uncertainty quantification},
+	volume = {16},
+	year = {2023}}
+
+@unpublished{oliveira2021unbiased,
+	author = {Natalia L. Oliveira and Jing Lei and Ryan J. Tibshirani},
+	date-added = {2023-03-26 09:46:52 -0700},
+	date-modified = {2023-03-26 09:48:16 -0700},
+	note = {arXiv: 2111.09447},
+	title = {Unbiased Risk Estimation in the Normal Means Problem via Coupled Bootstrap Techniques},
+	year = {2021}}
+
+@unpublished{bates2021cross,
+	author = {Stephen Bates and Trevor Hastie and Robert Tibshirani},
+	date-added = {2023-03-26 09:35:28 -0700},
+	date-modified = {2023-03-26 09:46:45 -0700},
+	note = {arXiv: 2104.00673},
+	title = {Cross-validation: {What} does it estimate and how well does it do it?},
+	year = {2021}}
 
 @unpublished{bach2023high,
 	author = {Francis Bach},
@@ -1646,11 +1673,11 @@
 @article{wang2013sure,
 	author = {Yi-Qing Wang and Jean-Michel Morel},
 	date-added = {2021-07-20 10:40:43 -0400},
-	date-modified = {2021-07-20 10:42:00 -0400},
+	date-modified = {2023-03-23 06:02:50 -0700},
 	journal = {SIAM Journal of Imaging Sciences},
 	number = {2},
 	pages = {999--1034},
-	title = {{SURE} Guided Gaussian Mixture Image Denoising},
+	title = {{SURE} Guided {Gaussian} Mixture Image Denoising},
 	volume = {6},
 	year = {2013}}
 
@@ -3083,10 +3110,11 @@
 
 @article{eldar2009generalized,
 	author = {Eldar, Yonina C.},
+	date-modified = {2023-03-23 06:03:36 -0700},
 	journal = {IEEE Transactions on Signal Processing},
 	number = {2},
 	pages = {471--481},
-	title = {Generalized SURE for Exponential Families: Applications to Regularization},
+	title = {Generalized {SURE} for Exponential Families: Applications to Regularization},
 	volume = {57},
 	year = {2009}}
 
